PLY export: Export broken result when mesh has faces with >255 vertices #112011

Closed
opened 2023-09-06 10:20:02 +02:00 by ExaDaniel · 4 comments

System Information
Operating system: Windows 10
Graphics card: RTX 2060 (laptop)

Blender Version
Broken: version: 3.6.1

Addon Information
Name: Stanford PLY format (2, 2, 0)
Author: Bruce Merry, Campbell Barton, Bastien Montagne, Mikhail Rachinsky

Short description of error
Exporting a mesh in PLY (using experimental mode) result in a broken mesh, exporting by legacy mode it all works well (despite longer time).

Note: Using ASCII mode export the mesh is exported and imported broken, unchecking the ASCII checkbox in the export result in a broken file (cannot import).

Screenshot-ply-export-experimental-broken.jpg

Exact steps for others to reproduce the error

  • Open attached .blend file
  • Export PLY using experimental mode
**System Information** Operating system: Windows 10 Graphics card: RTX 2060 (laptop) **Blender Version** Broken: version: 3.6.1 **Addon Information** Name: Stanford PLY format (2, 2, 0) Author: Bruce Merry, Campbell Barton, Bastien Montagne, Mikhail Rachinsky **Short description of error** Exporting a mesh in PLY (using experimental mode) result in a broken mesh, exporting by legacy mode it all works well (despite longer time). Note: Using ASCII mode export the mesh is exported and imported broken, unchecking the ASCII checkbox in the export result in a broken file (cannot import). ![Screenshot-ply-export-experimental-broken.jpg](/attachments/997880c1-08e8-4ce6-810d-49d136fca373) **Exact steps for others to reproduce the error** - Open attached .blend file - Export PLY using experimental mode
ExaDaniel added the
Severity
Normal
Type
Report
Status
Needs Triage
labels 2023-09-06 10:20:03 +02:00

Thank you for the report. But as you have reported an issue related to the "Stanford PLY format" addon, it should have been reported in the blender-addons repository instead of the blender repository.

So I recreated that report in the other repository: blender/blender-addons#104872

Thank you for the report. But as you have reported an issue related to the "Stanford PLY format" addon, it should have been reported in the [blender-addons](https://projects.blender.org/blender/blender-addons) repository instead of the [blender](https://projects.blender.org/blender/blender) repository. So I recreated that report in the other repository: https://projects.blender.org/blender/blender-addons/issues/104872
Blender Bot added
Status
Archived
and removed
Status
Needs Triage
labels 2023-09-06 17:27:43 +02:00

After notification from @deadpin, I was informed that the PLY exporter code was moved to the blender repository.

So reopening it here.

After notification from @deadpin, I was informed that the PLY exporter code was moved to the [blender](https://projects.blender.org/blender/blender) repository. So reopening it here.
Blender Bot added
Status
Needs Triage
and removed
Status
Archived
labels 2023-09-06 19:57:32 +02:00
Member

Thanks for the report. I can confirm.
@super_jo_nathan ^

I was informed that the PLY exporter code was moved to the blender repository.

Yes. And the python add-on is now removed 67a4aab0da 😅

Thanks for the report. I can confirm. @super_jo_nathan ^ > I was informed that the PLY exporter code was moved to the blender repository. Yes. And the python add-on is now removed https://projects.blender.org/blender/blender-addons/commit/67a4aab0da2f391d966ca81e4a43c7224870c1a3 😅
Pratik Borhade changed title from PLY export bug to PLY export: Exporting results in broken mesh. 2023-09-07 07:11:32 +02:00

@aras_p could you check this out?

@aras_p could you check this out?
Aras Pranckevicius self-assigned this 2023-09-27 20:36:17 +02:00
Aras Pranckevicius changed title from PLY export: Exporting results in broken mesh. to PLY export: Export broken result when mesh has faces with >255 vertices 2023-09-28 13:07:41 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-28 13:22:28 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#112011
No description provided.