Fix #112011: PLY export broken when mesh contains faces with >255 vertices

MPoly -> offset indices refactor (7966cd16d6dc4) did not realize
that due to forced triangulation the mesh changes, so we need
to re-fetch the faces array after triangulating. Fixes #112011